fix: truncate the current value in Select
Refs: PLG-24

--- a/packages/pelagos/src/components/Select.less
+++ b/packages/pelagos/src/components/Select.less
@@ -18,6 +18,7 @@
 		border-top-left-radius: 3px;
 		border-top-right-radius: 3px;
 		white-space: nowrap;
+		text-align: left;
 		cursor: pointer;
 
 		&:hover {
@@ -55,6 +56,11 @@
 		}
 	}
 
+	.Select__value {
+		@ellipsis();
+		flex: 1;
+	}
+
 	.Select__arrow {
 		margin-left: @sp-12;
 		transition: transform 0.15s ease-out;
@@ -82,7 +88,7 @@
 
 	.Select__option {
 		@layer-hover-effects();
-		display: block;
+		@ellipsis();
 		padding: @sp-04 @sp-12;
 		cursor: pointer;
 
